--- a/index.html
+++ b/index.html
@@ -2,7 +2,65 @@
 <html lang= "en">
 <head>
     <meta charset="UTF-8">
-    <title>Tässä on title</title>
+    <title>Barcelona sivu</title>
+    <style>
+    body {
+    background-color: rgb(199, 199, 199);
+    }
+    a {
+        color: red;
+        font-family: sans-serif;
+        font-size: 15px;
+    }
+    #otsikko1 {
+        color: blue;
+    }
+    #avaus {
+        width: 250px;
+        margin: auto;
+        text-align: center;
+    }
+    img.center {
+        width: 250px;
+        margin: auto;
+    }
+    #selostus {
+        width: 500px;
+        margin: auto;
+        text-align: center;
+        padding: 30px;
+    }
+    #lista {
+        width: 200px;
+        margin: auto;
+        background-color: rgb(144, 55, 228);
+        padding: 30px
+    }
+    </style>
 </head>
-<body>Tässä on "body teksti"</body>
+<body>
+    <div id="avaus">
+        <h1 id="otsikko1">FC Barcelona</h1>
+
+        <img class="center" src="FCB_logo.png" alt="FC Barcelona logo">
+    </div>
+
+    <div id="selostus">
+        <p>FC Barcelona on yksi Espanjan suurimmista jalkapalloseuroista</p>
+
+        <a href="https://www.fcbarcelona.com/en/" target="_blank">Kotisivut</a>
+    </div>
+    
+    <div id="lista">
+        <h2>Avain pelaajat</h2>
+
+        <ul>
+            <li>Yamal</li>
+            <li>Pedri</li>
+            <li>Raphinha</li>
+            <li>Lewandowski</li>
+        </ul>
+    </div>
+
+</body>
 </html>
